--- a/css/main.css
+++ b/css/main.css
@@ -155,12 +155,15 @@ h4 {
 }
 
 @media screen and (min-width: 1024px) {
+  .header {
+    align-items: flex-end;
+    margin-right: 1.5rem;
+  }
+
   .menu .header {
     position: sticky;
     top: 0;
     z-index: 1;
-    align-items: flex-end;
-    margin-right: 1.5rem;
     background-color: transparent;
   }
   .menu .header__button {
@@ -361,6 +364,19 @@ h4 {
   font-weight: 700;
 }
 
+@media screen and (min-width: 768px) {
+  .card-wrapper {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 2rem;
+    margin: 2rem 0;
+  }
+
+  .card {
+    margin: 0;
+  }
+}
 @keyframes reveal {
   to {
     transform: translateY(0);
@@ -551,7 +567,7 @@ h4 {
   margin-bottom: 1em;
 }
 
-.steps, .restaurants {
+.steps {
   padding: 3rem 1.5rem;
 }
 .steps__wrapper {
@@ -590,6 +606,7 @@ h4 {
 }
 
 .restaurants {
+  padding: 3rem 1.5rem;
   background-color: #f2f2f2;
 }
 
@@ -597,6 +614,49 @@ h4 {
   margin-bottom: 1.1em;
 }
 
+@media screen and (min-width: 768px) {
+  .home main {
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    height: auto;
+    padding: 0 1.5rem;
+  }
+  .home .location,
+.home .top-banner,
+.home .steps {
+    width: 45vw;
+  }
+  .home .location {
+    height: 10vh;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+    box-shadow: none;
+  }
+  .home .top-banner {
+    height: 40vh;
+    border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+  }
+  .home .steps {
+    position: relative;
+    bottom: 50vh;
+    align-self: flex-end;
+    height: 50vh;
+    padding: 1.5rem;
+    background-color: red;
+  }
+  .home .restaurants {
+    width: 100%;
+    margin-top: 2rem;
+    padding: 0;
+  }
+  .home .section-title {
+    margin-bottom: 0.5em;
+  }
+}
 @keyframes flip {
   to {
     transform: rotateX(1turn);
