--- a/sass/3_layout/_header.scss
+++ b/sass/3_layout/_header.scss
@@ -11,13 +11,15 @@
 }
 
 @include desktop-only {
+    .header {
+        align-items: flex-end;
+        margin-right: 1.5rem;
+    }
     .menu {
         .header {
             position: sticky;
             top: 0;
             z-index: 1;
-            align-items: flex-end;
-            margin-right: 1.5rem;
             background-color: transparent;
     
             &__button {
