responsive index: modify layout done

--- a/sass/3_layout/_header.scss
+++ b/sass/3_layout/_header.scss
@@ -10,11 +10,16 @@
     }
 }
 
-@include desktop-only {
+@include tablet-only {
     .header {
+        @include box-shadow;
+        width: 100%;
         align-items: flex-end;
-        margin-right: 1.5rem;
+        padding-right: 1.5rem;
     }
+}
+
+@include desktop-only {
     .menu {
         .header {
             position: sticky;
