--- a/css/main.css
+++ b/css/main.css
@@ -154,12 +154,15 @@ h4 {
   font-size: 1.2em;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 768px) {
   .header {
+    box-shadow: 0 5px 8px rgba(0, 0, 0, 0.1);
+    width: 100%;
     align-items: flex-end;
-    margin-right: 1.5rem;
+    padding-right: 1.5rem;
   }
-
+}
+@media screen and (min-width: 1024px) {
   .menu .header {
     position: sticky;
     top: 0;
@@ -338,9 +341,10 @@ h4 {
   width: 100%;
   height: 170px;
   object-fit: cover;
-  object-position: 50% 60%;
+  object-position: center;
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
+  transition: object-position 500ms;
 }
 .card__content {
   padding: 1rem;
@@ -375,6 +379,14 @@ h4 {
 
   .card {
     margin: 0;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .card:hover {
+    box-shadow: 0 5px 8px rgba(0, 0, 0, 0.25);
+  }
+  .card:hover .card__img {
+    object-position: 50% 60%;
   }
 }
 @keyframes reveal {
@@ -622,7 +634,7 @@ h4 {
     align-items: flex-start;
     flex-wrap: wrap;
     height: auto;
-    padding: 0 1.5rem;
+    padding: 30px 1.5rem;
   }
   .home .location,
 .home .top-banner,
@@ -630,31 +642,79 @@ h4 {
     width: 45vw;
   }
   .home .location {
-    height: 10vh;
+    height: 5vh;
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
     box-shadow: none;
   }
   .home .top-banner {
-    height: 40vh;
+    height: 35vh;
     border-bottom-left-radius: 1rem;
     border-bottom-right-radius: 1rem;
   }
   .home .steps {
-    position: relative;
-    bottom: 50vh;
+    flex-direction: column;
+    display: flex;
+    justify-content: flex-start;
+    align-items: stretch;
+    position: absolute;
+    top: 100.6px;
+    right: 1.5rem;
     align-self: flex-end;
-    height: 50vh;
-    padding: 1.5rem;
-    background-color: red;
+    height: 40vh;
+    padding: 0;
+  }
+  .home .steps__wrapper {
+    margin: 0;
   }
   .home .restaurants {
     width: 100%;
     margin-top: 2rem;
     padding: 0;
+    background-color: #fff;
   }
   .home .section-title {
     margin-bottom: 0.5em;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .home main {
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    height: auto;
+    padding: 30px 1.5rem;
+  }
+  .home .location,
+.home .top-banner,
+.home .steps {
+    width: 27vw;
+  }
+  .home .top-banner,
+.home .steps {
+    height: auto;
+  }
+  .home .location {
+    margin-top: 20px;
+  }
+  .home .top-banner {
+    padding: 30px 20px;
+  }
+  .home .steps {
+    position: static;
+    top: 0;
+    right: 0;
+    align-self: unset;
+    padding: 30px 20px;
+  }
+  .home .restaurants {
+    width: 65vw;
+    position: absolute;
+    top: 120.778px;
+    margin-top: 0;
+    align-self: flex-end;
   }
 }
 @keyframes flip {
