--- a/sass/4_components/_cards.scss
+++ b/sass/4_components/_cards.scss
@@ -14,9 +14,10 @@
         width: 100%;
         height: 170px;
         object-fit: cover;
-        object-position: 50% 60%;
+        object-position: center;
         border-top-left-radius: $border-radius;
         border-top-right-radius: $border-radius;
+        transition: object-position 500ms;
     }
 
     &__content {
@@ -55,5 +56,15 @@
 
     .card {
         margin: 0;
+    }
+}
+
+@include desktop-only {
+    .card:hover {
+        @include box-shadow(false, .25);
+
+        .card__img {
+            object-position: 50% 60%;
+        }
     }
 }
