--- a/css/main.css
+++ b/css/main.css
@@ -156,7 +156,6 @@ h4 {
 
 @media screen and (min-width: 768px) {
   .header {
-    box-shadow: 0 5px 8px rgba(0, 0, 0, 0.1);
     width: 100%;
     align-items: flex-end;
     padding-right: 1.5rem;
@@ -204,6 +203,26 @@ h4 {
   margin-right: 1em;
 }
 
+@media screen and (min-width: 768px) {
+  .footer {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .footer ul {
+    flex-direction: row;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .footer li {
+    margin-right: 2em;
+  }
+  .footer__title {
+    margin-right: 2em;
+    margin-bottom: 0;
+  }
+}
 @keyframes hide {
   to {
     z-index: -1;
@@ -501,7 +520,7 @@ h4 {
 }
 @media screen and (min-width: 1024px) {
   .dish {
-    width: 30vw;
+    width: auto;
     margin-top: 0;
   }
   .dish__descr {
@@ -512,6 +531,10 @@ h4 {
     display: flex;
     justify-content: center;
     align-items: flex-start;
+  }
+
+  .dish-container {
+    width: 90%;
   }
 }
 .home {
@@ -728,6 +751,9 @@ h4 {
     opacity: 1;
   }
 }
+.menu {
+  max-width: 1400px;
+}
 .menu h2 {
   margin: 1em 0 1.5em 0;
   position: relative;
@@ -741,7 +767,7 @@ h4 {
   height: 3px;
   background: #99E2D0;
 }
-.menu__body {
+.menu__main {
   flex-direction: column;
   display: flex;
   justify-content: center;
@@ -789,7 +815,7 @@ h4 {
 }
 
 @media screen and (min-width: 768px) {
-  .menu__body {
+  .menu__main {
     margin-top: 400px;
   }
 
@@ -798,6 +824,9 @@ h4 {
   }
 }
 @media screen and (min-width: 1024px) {
+  .menu {
+    margin: 0 auto;
+  }
   .menu h2 {
     position: sticky;
     top: 70px;
@@ -815,13 +844,13 @@ h4 {
     width: 6px;
     height: 1rem;
   }
-  .menu__body {
+  .menu__main {
     flex-direction: row-reverse;
     justify-content: flex-start;
     align-items: flex-start;
     flex-wrap: wrap;
     margin-top: 0;
-    margin-left: 5vw;
+    margin-left: 5%;
     border-radius: 0;
     background-color: #fff;
   }
@@ -833,7 +862,7 @@ h4 {
     margin-bottom: 0;
   }
   .menu__wrapper {
-    width: 40vw;
+    width: 40%;
     padding: 1rem 1rem 2rem 1rem;
     margin-bottom: -56.44px;
     border-radius: 1rem;
@@ -842,7 +871,7 @@ h4 {
     box-shadow: 0 5px 8px rgba(0, 0, 0, 0.5);
     position: sticky;
     top: 20vh;
-    width: 40vw;
+    width: 40%;
     margin: 0 auto;
     object-fit: cover;
     z-index: 0;
@@ -853,10 +882,6 @@ h4 {
   }
   .menu__photo:hover {
     border-radius: 1rem;
-  }
-  .menu__btn {
-    position: sticky;
-    bottom: 5vh;
   }
 
   .title-wrapper {
