--- a/sass/2_base/_typography.scss
+++ b/sass/2_base/_typography.scss
@@ -38,7 +38,7 @@ h3 {
 h4 {
     font-family: $font-family-cursive;
     font-size: 1.1rem;
-    color: text-color($bg-footer);
+    color: text-color($bg-secondary-800);
 }
 
 %font-weight-bold {
