--- a/sass/5_pages/_home.scss
+++ b/sass/5_pages/_home.scss
@@ -25,7 +25,7 @@
     @include flex(false);
     @include box-shadow(inset);
     height: 50px;
-    background-color: $bg-accent;
+    background-color: $bg-secondary-400;
     color: $text-accent;
 
     &__icon {
@@ -43,8 +43,8 @@
     @include flex;
     height: 270px;
     padding: 0 20px;
-    background-color: $bg-secondary;
-    color: text-color($bg-secondary);
+    background-color: $bg-secondary-200;
+    color: text-color($bg-secondary-200);
     text-align: center;
 
     &__title {
@@ -78,7 +78,7 @@
     margin: 20px 0 0 10px;
     padding: 1.5em 0;
     border-radius: $border-radius;
-    background-color: $bg-secondary;
+    background-color: $bg-secondary-200;
 
     &__num {
         position: relative;
@@ -110,7 +110,7 @@
 
 .restaurants {
     padding: 3rem 1.5rem;
-    background-color: $bg-secondary;
+    background-color: $bg-secondary-200;
 }
 
 .section-title{
