--- a/sass/5_pages/_menu.scss
+++ b/sass/5_pages/_menu.scss
@@ -6,6 +6,8 @@
 }
 
 .menu {
+    max-width: 1400px;
+
     h2 {
         @extend %text-uppercase;
         @extend %font-weight-light;
@@ -23,14 +25,14 @@
         }
     }
 
-    &__body {
+    &__main {
         @include flex;
         position: relative;
         margin-top: 200px;
         padding: 10px 1.5rem 80px 1.5rem;
         border-top-left-radius: $border-radius-lg;
         border-top-right-radius: $border-radius-lg;
-        background-color: $bg-secondary;
+        background-color: $bg-secondary-200;
     }
 
     &__photo {
@@ -44,7 +46,7 @@
     &__wrapper {
         width: 100%;
         margin-bottom: 20px;
-        background-color: $bg-secondary;
+        background-color: $bg-secondary-200;
     }
 
     &__btn {
@@ -71,7 +73,7 @@
 } 
 
 @include tablet-only {
-    .menu__body {
+    .menu__main {
         margin-top: 400px;
     }
 
@@ -83,6 +85,8 @@
 
 @include desktop-only {
     .menu {
+        margin: 0 auto;
+
         h2 {
             position: sticky;
             top: 70px;
@@ -91,7 +95,7 @@
             margin-left: -1%;
             margin-bottom: 0;
             padding: 1rem 1.5rem;
-            background-color: $bg-secondary;
+            background-color: $bg-secondary-200;
             z-index: 1;
 
             &::after {
@@ -102,13 +106,13 @@
             }
         }
                 
-        &__body {
+        &__main {
             flex-direction: row-reverse;
             justify-content: flex-start;
             align-items: flex-start;
             flex-wrap: wrap;
             margin-top: 0;
-            margin-left: 5vw;
+            margin-left: 5%;
             border-radius: 0;
             background-color: $bg-primary;
         }
@@ -119,7 +123,7 @@
 
 
         &__wrapper {
-            width: 40vw;
+            width: 40%;
             padding: 1rem 1rem 2rem 1rem;
             margin-bottom: -56.44px;
             border-radius: $border-radius;
@@ -130,7 +134,7 @@
             @include box-shadow(false, .5);
             position: sticky;
             top: 20vh;
-            width: 40vw;
+            width: 40%;
             margin: 0 auto;
             object-fit: cover;
             z-index: 0;
@@ -142,12 +146,6 @@
             &:hover {
                 border-radius: $border-radius;
             }
-
-        }
-
-        &__btn {
-            position: sticky;
-            bottom: 5vh;
         }
     }
 
@@ -158,7 +156,7 @@
         left: 0;
         margin: 0 -1em;
         padding: 0 1em;
-        background-color: $bg-secondary;
+        background-color: $bg-secondary-200;
         z-index: 2;
     }
 }
