--- a/css/main.css
+++ b/css/main.css
@@ -137,7 +137,7 @@ h4 {
 }
 @media screen and (min-width: 1024px) {
   html {
-    font-size: 18px;
+    font-size: 17px;
   }
 }
 .header {
@@ -672,7 +672,6 @@ h4 {
     box-shadow: none;
   }
   .home .top-banner {
-    height: 35vh;
     border-bottom-left-radius: 1rem;
     border-bottom-right-radius: 1rem;
   }
@@ -712,12 +711,11 @@ h4 {
     align-items: flex-start;
     flex-wrap: wrap;
     height: auto;
-    padding: 30px 1.5rem;
   }
   .home .location,
 .home .top-banner,
 .home .steps {
-    width: 27%;
+    width: 20rem;
   }
   .home .top-banner,
 .home .steps {
@@ -737,12 +735,12 @@ h4 {
     padding: 30px 20px;
   }
   .home .restaurants {
-    width: 65%;
     position: absolute;
     top: 120.778px;
     margin-top: 0;
     align-self: flex-end;
     max-width: 910px;
+    width: 35rem;
   }
 }
 @keyframes flip {
@@ -814,22 +812,14 @@ h4 {
   align-items: center;
 }
 
-@media screen and (min-width: 768px) {
-  .menu__main {
-    margin-top: 400px;
-  }
-
-  .menu__photo {
-    top: -400px;
-  }
-}
 @media screen and (min-width: 1024px) {
   .menu {
     margin: 0 auto;
+    height: auto;
   }
   .menu h2 {
     position: sticky;
-    top: 70px;
+    top: 65px;
     width: 103%;
     margin-top: 0;
     margin-left: -1%;
@@ -845,12 +835,12 @@ h4 {
     height: 1rem;
   }
   .menu__main {
-    flex-direction: row-reverse;
-    justify-content: flex-start;
+    flex-direction: row;
     align-items: flex-start;
     flex-wrap: wrap;
     margin-top: 0;
-    margin-left: 5%;
+    margin-bottom: 5rem;
+    padding-bottom: 0;
     border-radius: 0;
     background-color: #fff;
   }
@@ -862,6 +852,7 @@ h4 {
     margin-bottom: 0;
   }
   .menu__wrapper {
+    order: 1;
     width: 40%;
     padding: 1rem 1rem 2rem 1rem;
     margin-bottom: -56.44px;
@@ -871,9 +862,9 @@ h4 {
     box-shadow: 0 5px 8px rgba(0, 0, 0, 0.5);
     position: sticky;
     top: 20vh;
+    left: 50%;
     width: 40%;
-    margin: 0 auto;
-    object-fit: cover;
+    order: 2;
     z-index: 0;
     transition: border-radius 150ms;
     animation: flip 1500ms cubic-bezier(0, 0.93, 0.68, 0.93) forwards;
@@ -882,6 +873,12 @@ h4 {
   }
   .menu__photo:hover {
     border-radius: 1rem;
+  }
+  .menu__btn {
+    position: sticky;
+    top: 34rem;
+    bottom: 20vh;
+    order: 3;
   }
 
   .title-wrapper {
