--- a/sass/5_pages/_menu.scss
+++ b/sass/5_pages/_menu.scss
@@ -72,24 +72,14 @@
     @include flex(false, space-between, center);
 } 
 
-@include tablet-only {
-    .menu__main {
-        margin-top: 400px;
-    }
-
-    .menu__photo {
-        top: -400px;
-    }
-
-}
-
 @include desktop-only {
     .menu {
         margin: 0 auto;
+        height: auto;
 
         h2 {
             position: sticky;
-            top: 70px;
+            top: 65px;
             width: 103%;
             margin-top: 0;
             margin-left: -1%;
@@ -107,12 +97,12 @@
         }
                 
         &__main {
-            flex-direction: row-reverse;
-            justify-content: flex-start;
+            flex-direction: row;
             align-items: flex-start;
             flex-wrap: wrap;
             margin-top: 0;
-            margin-left: 5%;
+            margin-bottom: 5rem;
+            padding-bottom: 0;
             border-radius: 0;
             background-color: $bg-primary;
         }
@@ -123,6 +113,7 @@
 
 
         &__wrapper {
+            order: 1;
             width: 40%;
             padding: 1rem 1rem 2rem 1rem;
             margin-bottom: -56.44px;
@@ -134,9 +125,9 @@
             @include box-shadow(false, .5);
             position: sticky;
             top: 20vh;
+            left: 50%;
             width: 40%;
-            margin: 0 auto;
-            object-fit: cover;
+            order: 2;
             z-index: 0;
             transition: border-radius 150ms;
             animation: flip 1500ms cubic-bezier(0, 0.93, 0.68, 0.93) forwards;
@@ -146,6 +137,13 @@
             &:hover {
                 border-radius: $border-radius;
             }
+        }
+
+        &__btn {
+            position: sticky;
+            top: 34rem;
+            bottom: 20vh;
+            order: 3;
         }
     }
 
