--- a/sass/4_components/_dish.scss
+++ b/sass/4_components/_dish.scss
@@ -11,7 +11,9 @@
     padding: 10px;
     border-radius: $border-radius;
     background-color: white;
-    animation: reveal 1000ms both 150ms;
+    animation-name: reveal;
+    animation-duration: 1000ms;
+    animation-fill-mode: both;
     transform: translateY(30px);
     opacity: 0;
     overflow: hidden;
