minor adjust: menu header reposition and photo resize)

--- a/sass/3_layout/_header.scss
+++ b/sass/3_layout/_header.scss
@@ -20,8 +20,12 @@
 
 @include desktop-only {
     .menu {
-        .header__button {
-                display: none;
+        .header {
+            align-items: flex-start;
+
+            &__button {
+                    display: none;
+            }
         }
     }
 }
