--- a/css/main.css
+++ b/css/main.css
@@ -162,6 +162,9 @@ h4 {
   }
 }
 @media screen and (min-width: 1024px) {
+  .menu .header {
+    align-items: flex-start;
+  }
   .menu .header__button {
     display: none;
   }
@@ -705,6 +708,9 @@ h4 {
   .home .index-main {
     flex-direction: row;
     justify-content: space-between;
+    align-items: flex-start;
+    margin-bottom: 50px;
+    padding: 0;
   }
   .home .home-intro {
     flex-direction: column;
@@ -715,10 +721,11 @@ h4 {
     width: 100%;
   }
   .home .steps {
-    margin-top: 2rem;
+    margin: 2rem 0 0 0;
   }
   .home .restaurants {
     width: calc(100% / 3 * 2 - 1rem);
+    margin: 0;
   }
 }
 @keyframes flip {
@@ -821,6 +828,7 @@ h4 {
   .menu__main {
     flex-direction: row;
     align-items: flex-start;
+    justify-content: flex-end;
     margin-top: 2rem;
     padding-bottom: 0;
     border-radius: 0;
@@ -849,10 +857,10 @@ h4 {
     right: 0;
     bottom: 0;
     left: 0;
-    width: 100vw;
-    max-width: 1400px;
-    margin: 0 auto;
+    width: 1400px;
+    height: 1200px;
     object-fit: cover;
+    margin: 0 auto;
   }
   .menu__btn {
     position: sticky;
