--- a/sass/5_pages/_home.scss
+++ b/sass/5_pages/_home.scss
@@ -6,7 +6,7 @@
 }
 .home {
     animation-name: display;
-    animation-delay: 2s;
+    animation-delay: $loader-duration;
     animation-fill-mode: forwards;
     overflow: hidden;
     height: 100vh;
