minor adjust header position and home body margins for tablette

--- a/sass/3_layout/_footer.scss
+++ b/sass/3_layout/_footer.scss
@@ -29,7 +29,7 @@
     }
 }
 
-@include tablet-only {
+@include desktop-only {
     .footer {
         flex-direction: row;
         justify-content: space-between;
