--- a/css/main.css
+++ b/css/main.css
@@ -162,11 +162,16 @@ h4 {
   }
 }
 @media screen and (min-width: 1024px) {
+  .header__button {
+    display: none;
+  }
+
+  .home .header {
+    padding-right: 0;
+  }
+
   .menu .header {
     align-items: flex-start;
-  }
-  .menu .header__button {
-    display: none;
   }
 }
 .footer {
@@ -200,7 +205,7 @@ h4 {
   margin-right: 1em;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1024px) {
   .footer {
     flex-direction: row;
     justify-content: space-between;
@@ -255,7 +260,7 @@ h4 {
   height: 100vh;
   background-color: #fff;
   animation-name: hide;
-  animation-delay: 2s;
+  animation-delay: 2100ms;
   animation-fill-mode: forwards;
 }
 
@@ -273,7 +278,7 @@ h4 {
   z-index: 2;
   border-radius: 50%;
   opacity: 0.7;
-  animation: spin 1000ms 3 alternate cubic-bezier(0.21, 1, 0.13, 1.01);
+  animation: spin 1000ms 4 alternate cubic-bezier(0.21, 1, 0.13, 1.01);
 }
 
 .spinner-primary {
@@ -302,7 +307,7 @@ h4 {
   margin: auto;
   background-color: transparent;
   font-family: "Shrikhand", cursive;
-  animation: heart-beat 1000ms 3 cubic-bezier(0.21, 1, 0.13, 1.01) alternate;
+  animation: heart-beat 1000ms 4 cubic-bezier(0.21, 1, 0.13, 1.01) alternate;
   transform: scale(0.8);
   opacity: 0.4;
 }
@@ -541,7 +546,7 @@ h4 {
 }
 .home {
   animation-name: display;
-  animation-delay: 2s;
+  animation-delay: 2100ms;
   animation-fill-mode: forwards;
   overflow: hidden;
   height: 100vh;
@@ -650,14 +655,15 @@ h4 {
   .home {
     margin: 0 auto;
   }
-  .home .index-main {
+  .home .home-main {
     flex-direction: column;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 30px 1.5rem;
+    padding: 0 1.5rem;
+    padding-bottom: 50px;
   }
-  .home .home-intro {
+  .home .intro {
     flex-direction: row;
     display: flex;
     justify-content: space-between;
@@ -702,14 +708,14 @@ h4 {
   }
 }
 @media screen and (min-width: 1024px) {
-  .home .index-main {
+  .home .home-main {
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
-    margin-bottom: 50px;
     padding: 0;
+    padding-bottom: 50px;
   }
-  .home .home-intro {
+  .home .intro {
     flex-direction: column;
     width: calc(100% / 3 * 1 - 1rem);
   }
