--- a/sass/3_layout/_header.scss
+++ b/sass/3_layout/_header.scss
@@ -19,13 +19,19 @@
 }
 
 @include desktop-only {
+    .header__button {
+        display: none;
+    } 
+
+    .home {
+        .header {
+            padding-right: 0;
+        }
+    }
+
     .menu {
         .header {
             align-items: flex-start;
-
-            &__button {
-                    display: none;
-            }
         }
     }
 }
