--- a/css/main.css
+++ b/css/main.css
@@ -814,13 +814,18 @@ h4 {
     height: 1rem;
   }
   .menu__main {
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: flex-end;
-    margin-top: 2rem;
+    margin-top: 0;
+    background-color: #fff;
     padding-bottom: 0;
-    border-radius: 0;
-    background-color: transparent;
+  }
+  .menu__main .container {
+    flex-direction: row;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    height: auto;
+    margin-bottom: 3rem;
   }
   .menu__catagory {
     flex-direction: column;
@@ -831,29 +836,23 @@ h4 {
   }
   .menu__wrapper {
     width: 40%;
-    margin: 1.5rem;
-    margin-bottom: 5rem;
     padding: 1rem 1rem 2rem 1rem;
+    margin-bottom: 0;
     border-radius: 1rem;
     animation: flip 1000ms 150ms forwards;
     transform: rotateY(0.7turn);
     opacity: 0;
   }
   .menu__photo {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 1400px;
-    height: 1200px;
-    object-fit: cover;
+    position: sticky;
+    top: 1.5rem;
+    width: 50%;
+    height: auto;
     margin: 0 auto;
+    z-index: 0;
   }
   .menu__btn {
-    position: sticky;
-    top: 80%;
-    margin-bottom: 83px;
+    margin-top: 1.5rem;
     animation: reveal 1200ms 1500ms forwards;
     transform: translateY(10%);
     opacity: 0;
